--- a/app/assets/stylesheets/global/main.css
+++ b/app/assets/stylesheets/global/main.css
@@ -43,6 +43,28 @@ body {
 	-webkit-box-shadow: #AAA 0px 0px 15px;
 }
 
+.half-transparent {
+	filter: alpha(opacity=50);
+	/* Theoretically for IE 8 & 9 (more valid) */	
+	/* ...but not required as filter works too */
+	/* should come BEFORE filter */
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+	
+	/* This works in IE 8 & 9 too */
+	/* ... but also 5, 6, 7 */
+	filter: alpha(opacity=50);
+	
+	/* Older than Firefox 0.9 */
+	-moz-opacity:0.5;
+	
+	/* Safari 1.x (pre WebKit!) */
+	-khtml-opacity: 0.5;
+    
+	/* Firefox 0.9+, Safari 2?, Chrome any?
+	/* Opera 9+, IE 9+ */
+	opacity: 0.5;
+}
+
 .clearfix {
 	clear:both;
 	height:0;
