--- a/app/views/share/settings/_visible_for.html.erb
+++ b/app/views/share/settings/_visible_for.html.erb
@@ -7,11 +7,12 @@
 			</div>		
 			<ul class="font-smaller ui-corner-all button">
 				<li class="explanation"><%= t('settings.visible_for.explanation') %></li>
+				<li><%= "#{model_type.downcase}" %></li>
 				<% settings.each do |setting| %>
 					<% if setting.to_s == current.to_s %>
 						<li class="current"><%= link_to t("settings.visible_for.#{setting}", :owner => owner.to_s), self.send("changesetting_#{model_type.downcase}_path", :owner => owner.to_s, :settings => settings, :model_type => model_type, :model_id => model_id.to_i, :setting => "visible_for", :value => setting, :css_id => css_id), :method => :put, :remote => true %></li>
 					<% else %>				
-						<li><%= link_to t("settings.visible_for.#{setting}", :owner => owner.to_s), self.send("changesetting_#{model_type.downcase}_path", :owner => owner.to_s, :settings => settings, :model_type => model_type, :model_id => model_id.to_i, :setting => "visible_for", :value => setting, :css_id => css_id), :method => :put, :remote => true %></li>
+						<li><%# link_to t("settings.visible_for.#{setting}", :owner => owner.to_s), self.send("changesetting_#{model_type.downcase}_path", :owner => owner.to_s, :settings => settings, :model_type => model_type, :model_id => model_id.to_i, :setting => "visible_for", :value => setting, :css_id => css_id), :method => :put, :remote => true %></li>
 					<% end %>	
 				<% end %>			
 			</ul>
