--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,4 +1,4 @@
-<div class="list-item <%=h item.itemtype.downcase if item.item_type_id? %> <%=h is_need?(item) %> ui-corner-all">
+<div id="item-<%= item.id %>" class="item list-item <%=h item.itemtype.downcase if item.item_type_id? %> <%=h is_need?(item) %> ui-corner-all">
 
 	<%= render :partial => "share/list-item/usermenu", :locals => { :model => item } if logged_in? and item.creator == current_user %>
   <div class="item-type font-smaller">
