--- a/app/views/share/list-item/_usermenu.html.erb
+++ b/app/views/share/list-item/_usermenu.html.erb
@@ -2,7 +2,7 @@
 <ul class="horizontal usermenu ui-corner-all">
   <li>
 		<%= link_to image_tag("icons/icon_edit.png", :title => t("edit").html_safe, :alt => t("edit").html_safe), 
-				{:action => "edit", :id => model} %>
+				edit_polymorphic_path([@user, model]) %>
 	</li>
 	<li>
 		<%= render :partial => "share/settings/visible_for", :locals => { :owner => model.owner.login, :settings => AppSettings.item.visible_for.values, :model_type => "Items", :model_id => model.id, :current => model.settings.visible_for || AppSettings.item.visible_for.default, :css_id => "item-#{model.id}" } if model.owner == current_user %>	
