--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -111,12 +111,16 @@
       <%= render :partial => "items/item_attachments", :locals => { :f => f, :object => @item } %>
     </div>
 		<div id="settings" class="tab_content">
-			<%= f.semantic_fields_for :itemsettings do |settings_form| %>
-				<li class="select input required" id="item_settings_visible_for_input">
-					<label class=" label" for="item_settings_visible_for">Sichtbar für</label>
-					<%= settings_form.select :visible_for, options_for_select(AppSettings.item.visible_for.values.map { |v| [t("settings.visible_for.#{v}").html_safe, v] }, @setting_visible_for) %>
-				</li>
-				<% end %>
+			<fieldset class="inputs">
+				<ol>
+					<%= f.semantic_fields_for :itemsettings do |settings_form| %>
+						<li class="select input required" id="item_settings_visible_for_input">
+							<label class=" label" for="item_settings_visible_for">Sichtbar für</label>
+							<%= settings_form.select :visible_for, options_for_select(AppSettings.item.visible_for.values.map { |v| [t("settings.visible_for.#{v}").html_safe, v] }, @setting_visible_for) %>
+						</li>
+					<% end %>
+				</ol>
+			</fieldset>
 		</div>
   </div>
   <%= f.actions do %>
