--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,37 +1,32 @@
-<% content_for :head do %>
-  <%# javascript_include_tag 'startpage' %>
-  <%# stylesheet_link_tag 'global/startpage' %>
-<% end %>
-
 <h1><%=h t("title.welcome") %></h1>
 <div class="sub2cols">
   <div class="subcol1">
     <h2>
-      <b>iwyg</b> - the social "go happy"-network. Here here you can do, what you like - for you and others.
+      <b>iwyg</b> - Das soziale "Go Happy"-Netzwerk. Hier kannst Du machen, was Du gerne tust, f&uuml;r Dich und andere.
     </h2>
-		<div class="box ui-corner-all">
+    <div class="box ui-corner-all">
 			<h3>
-				It's all about you:
+				Hier geht es um dich:
 			</h3>
 			<ul>
-				<li>&raquo; what do you need?</li>
-				<li>&raquo; what do you want to do?</li>
-				<li>&raquo; what are your dreams and wishes?</li>
+				<li>&raquo; was brauchst du?</li>
+				<li>&raquo; was möchtest du tun?</li>
+				<li>&raquo; was sind deine Träume und Wünsche?</li>
 			</ul>
     <div class="box ui-corner-all">
 		</div>
 		  <h3>
-				Let's get connected:
+				Verbinden wir uns:
 			</h3>
 			<ul>
-				<li>&raquo; to help.</li>
-				<li>&raquo; to create.</li>
-				<li>&raquo; to grow.</li>
-				<li>&raquo; to learn from eachother.</li>
+				<li>&raquo; um zu helfen.</li>
+				<li>&raquo; um zu kreieren.</li>
+				<li>&raquo; um zu wachsen.</li>
+				<li>&raquo; um voneinander zu lernen.</li>
 			</ul>
     </div>
     <div class="box ui-corner-all">
-      <cite>The mind is rich of what he receives, the heart of what it gives.</cite>
+      <cite>Der Geist wird reich durch das, was er empfängt, das Herz durch das, was es gibt.</cite>
     </div>
     <div class="right font-smaller">
       (Victor Hugo)
@@ -42,3 +37,4 @@
     <%= render :partial => "share/login" %>
   </div>  
 </div>
+<div class="clearfix"></div>
