--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html lang="<%= I18n.locale.to_s %>">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<% set_meta_tags site: 'iwyg', title: t('iwyg.title'), separator: '-' %>
+	<% set_meta_tags site: 'iwyg', title: @page_title || t('iwyg.title'), separator: '-' %>
 	<% description t('meta.description') %>
 	<% keywords t('meta.keywords') %>
 	<%= display_meta_tags :site => 'iwyg' %>
