--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -11,6 +11,7 @@
 //= require jquery-ui-timepicker-addon                                               
 //= require jquery.tokeninput
 //= require jquery.ui.addresspicker
+//= require jquery.colorbox
 //= require_self
 
 
@@ -21,6 +22,9 @@ jQuery.ajaxSetup({
 */
 
 $(document).ready(function (){
+
+    // Colorbox
+    $('.colorbox').colorbox();
 
     // Searchform (extended)
     $('#advanced_search').show();
