--- a/app/views/share/_avatar.html.erb
+++ b/app/views/share/_avatar.html.erb
@@ -1,7 +1,11 @@
 <% if model %>
 <div id="avatar"> 
   <span>
-    <%= image_tag smallThumb(model) %>
+  	<% if model.images.first %>
+    	<%= link_to image_tag(smallThumb(model)), model, class: "colorbox" %>
+    <% else %>
+    	<%= image_tag smallThumb(model) %>
+    <% end %>
   </span>
 </div>
 <% end %>
