--- a/app/views/share/_avatar.html.erb
+++ b/app/views/share/_avatar.html.erb
@@ -2,7 +2,7 @@
 <div id="avatar"> 
   <span>
   	<% if model.images.first %>
-    	<%= link_to image_tag(smallThumb(model)), model, class: "colorbox" %>
+    	<%= link_to image_tag(smallThumb(model)), model.images.first.image.url, class: "colorbox" %>
     <% else %>
     	<%= image_tag smallThumb(model) %>
     <% end %>
