--- a/app/views/share/social/_likers.html.erb
+++ b/app/views/share/social/_likers.html.erb
@@ -1,4 +1,4 @@
-<% if likes_count > 0 %>
+<% if likes_count and likes_count > 0 %>
 <div id="likes" class="box ui-corner-all">
 	<div id="likes-count"><span><%= image_tag("icons/icon_likes.png", :alt => t("liked_by"), :title => t("liked_by")) %>&nbsp;</span><span>(<%= likes_count %>)</span>
 	</div>
