maps shown up on items for not logged in ones

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -69,7 +69,7 @@
   <%= render :partial => "share/pings", :locals => {:pings => @pings, :pingable => @item}  %>
 </div>
 <div id="col2">
-  <% if logged_in? and ( @location && !@locations_json.blank? ) %>
+  <% if @location && !@locations_json.blank? %>
   <div class="box ui-corner-all">
     <div class="location">			
         <%= render :partial => "share/map", :locals => { :locations => @locations_json } %>
