--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -18,7 +18,7 @@
 
   <h1><%=h @item.title %></h1>     
   <%= render :partial => "items/itemmenu", :locals => { :item => @item } %>
-	<span class="float-right"><%= render :partial => "share/social", :locals => { :thing => @item } %></span>
+	
 
   <%= render :partial => "share/images", :locals => {:images => @item.images} %>
   <% if @item.status %>
@@ -76,6 +76,8 @@
     </div>
   </div>
   <% end %>
+  <div class="clear"></div>
+  <span class="float-right"><%= render :partial => "share/social", :locals => { :thing => @item } %></span>
   <div class="clear"></div>
   <%= render :partial => 'share/social/likers', :locals => { :likes_count => @likes_count, :likers => @likers} %>
   <% if @items_related.size > 0 && @item.tags.size > 0 %>
