--- a/app/views/share/userarea/_profileusermenu.html.erb
+++ b/app/views/share/userarea/_profileusermenu.html.erb
@@ -3,8 +3,10 @@
     <li class="button">
       <%= link_to t("menu.user.sendMessage"), new_sent_path(:to => user), :remote => true, :id => "send_message" %>
     </li>
-    <% if not current_user.following?(user) %>
-      <li class="button"><%= link_to t("follow"), follow_user_path, :method => :put %></li>
+    <% if not user.followed_by?(current_user) %>
+      <%= render :partial => "share/social/follow", :locals => { user: current_user, model_id: user.id, model_type: "User"} %>
+    <% else %>
+      <%= render :partial => "share/social/unfollow", :locals => { user: current_user, model_id: user.id, model_type: "User"} %>
     <% end %>
   </ul>
 <% end %>
