--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,12 +1,13 @@
-<ul>
-<% @followings.each do |following| %>
+<ul id="followings">
+<% @followings.each do |f| %>
   <li><%=
-     if following.class.to_s == "User"
-      render :partial => "share/usertiny", :locals => { :user => following }
-     elsif following.class.to_s == "Item"
-      render :partial => "share/itemtiny", :locals => { :item => following }
-     elsif following.class.to_s == "Group"
-      render :partial => "share/grouptiny", :locals => { :group => following }
+     case f.followable.class.to_s
+     when "User"
+      render :partial => "share/usertiny", :locals => { :user => f.followable }
+     when "Item"
+      render :partial => "share/itemtiny", :locals => { :item => f.followable }
+     when "Group"
+      render :partial => "share/grouptiny", :locals => { :group => f.followable }
      end
   %></li>
 <% end %>
