mini-profiler and features for liking users

--- a/app/views/share/userarea/_profileusermenu.html.erb
+++ b/app/views/share/userarea/_profileusermenu.html.erb
@@ -8,5 +8,10 @@
     <% else %>
       <%= render :partial => "share/social/unfollow", :locals => { user: current_user, model_id: user.id, model_type: "User"} %>
     <% end %>
+    <% if not current_user.likes?(user) %>
+      <%= render :partial => "share/social/like", :locals => { user: current_user, model_id: user.id, model_type: "User"} %>
+    <% else %>
+      <%= render :partial => "share/social/unlike", :locals => { user: current_user, model_id: user.id, model_type: "User"} %>
+    <% end %>
   </ul>
 <% end %>
