more client side geocoding

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -114,8 +114,8 @@ function pickAddressOn(el, location) {
 	    },
 			elements: {
 		    map:      "#map",
-		    lat:      "#lat",
-		    lng:      "#lng",
+		    lat:      ids[4],
+		    lng:      ids[5],
 				locality: ids[0],
 				administrative_area_level_1: ids[1],
 				postal_code:ids[2],
