--- a/app/views/items/_itemmenu.html.erb
+++ b/app/views/items/_itemmenu.html.erb
@@ -7,11 +7,7 @@
           :method => :delete %>
     </li>
   <% else %>
-    <% if not item.followed_by?(current_user) %>
-      <%= render :partial => "share/social/follow", :locals => { user: current_user, model_id: item.id, model_type: "Item"} %>
-    <% else %>
-      <%= render :partial => "share/social/unfollow", :locals => { user: current_user, model_id: item.id, model_type: "Item"} %>
-    <% end %>
+    <%= render partial: "share/social/followbuttons", :locals => { user: current_user, model: item } %>
     <% if not current_user.likes?(item) %>
       <%= render :partial => "share/social/like", :locals => { user: current_user, model_id: item.id, model_type: "Item"} %>
     <% else %>
