--- a/app/views/share/userarea/_profileusermenu.html.erb
+++ b/app/views/share/userarea/_profileusermenu.html.erb
@@ -4,10 +4,6 @@
       <%= link_to t("menu.user.sendMessage"), new_sent_path(:to => user), :remote => true, :id => "send_message" %>
     </li>
     <%= render partial: "share/social/followbuttons", :locals => { user: current_user, model: user } %>
-    <% if not current_user.likes?(user) %>
-      <%= render :partial => "share/social/like", :locals => { user: current_user, model_id: user.id, model_type: "User"} %>
-    <% else %>
-      <%= render :partial => "share/social/unlike", :locals => { user: current_user, model_id: user.id, model_type: "User"} %>
-    <% end %>
+    <%= render partial: "share/social/likebuttons", :locals => { user: current_user, model: user } %>
   </ul>
 <% end %>
