--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -58,7 +58,16 @@
   </div>
   
 <% else %>
-    <%= render :partial => "share/list_pagination", :locals => {:collection => collection} %>
-    <%= render :partial => "item", :collection => collection %>
-    <%= render :partial => "share/list_pagination", :locals => {:collection => collection} %>
+  <% if !@locations_json.blank? %>
+  <div class="box ui-corner-all">
+    <div class="location">      
+        <center>
+          <%= render :partial => "share/map", :locals => { :locations => @locations_json } %>
+        </center>
+    </div>
+  </div>
+  <% end %>  
+  <%= render :partial => "share/list_pagination", :locals => {:collection => collection} %>
+  <%= render :partial => "item", :collection => collection %>
+  <%= render :partial => "share/list_pagination", :locals => {:collection => collection} %>
 <% end %>
