--- a/app/views/share/_map.html.erb
+++ b/app/views/share/_map.html.erb
@@ -1,5 +1,5 @@
 <%# gmaps4rails(locations) %>
 <%= gmaps({
-    "map_options" => {"auto_zoom" => false, "zoom" => 15, "detect_location" => true, "auto_adjust" => true},
+    "map_options" => {"auto_zoom" => true, "detect_location" => true, "auto_adjust" => true},
     "markers" => {"data" => locations}
   }) %>
