--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,5 @@
 <div id="col1">
+<% if @item %>
   <%= render :partial => "items/itemtype", :locals => { :item => @item } %>
   <%= render :partial => "locations/location", :locals => { :location => @location } %>    
   <h1><%=h @item.title %></h1>     
@@ -92,4 +93,5 @@
       <%# render :partial => "share/comments", :locals => {:commentable => @item, :comments => @comments} %>
     </div>
     <div class="clearfix"></div>
+<% end %>
 
